--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,8 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 
-    <title>Hello, world!</title>
+    <title><%= title %></title>
   </head>
   <body>
     
@@ -16,10 +17,8 @@
       <div class="row">
         <div class="col-12 col-md-4">
           <h2> Páginas </h2>
-          <ul>
-            <% pages.forEach(page => {%>
-              <li><a href="/pages/<%= page %>"><%= page %></a></li>
-            <% }) %>
+          <ul class="menu-pages">
+            <%- include('./components/menu', {pages}) %>
             <li><a href="/admin">Adicionar</a></li>
           </ul>
         </div>
